[package]
name = "substreams_rpc_errors"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "^0.11.0"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.79"
prost-types = "0.11.0"
# Use latest from https://crates.io/crates/substreams
substreams = "0.3.2"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.6.2"
substreams-entity-change = { git="https://github.com/Xeric-NFT/substreams-entity-change.git"}
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
thiserror = "1.0.37"


# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.6.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"